<resources>
    <string name="app_name">Notalone</string>
    <string name="app_title">のたろん</string>
    <string name="splash">splash</string>
    <string name="login">login</string>
    <string name="main">main</string>
    <string name="have_account">アカウントを作成済みの方</string>
    <string name="account_image">人型の画像</string>
    <string name="user_id">e-mail (変更不可)</string>
    <string name="key_image">鍵の画像</string>
    <string name="password">パスワード</string>
    <string name="log_in">LOG IN</string>
    <string name="push">PUSH</string>
    <string name="not_have_account">新規登録はこちら</string>
    <string name="register">新規登録</string>
    <string name="name">表示名</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="enter_info">必要な情報を入力してください</string>
    <string name="success_login">としてログインしました</string>
    <string name="pass_length">パスワードは6文字以上にしてください</string>
    <string name="err_net">ネットワークエラー</string>
    <string name="exist_address">登録済みのメールアドレスです</string>
    <string name="err_occured">エラーが発生しました</string>
    <string name="err_not_exist">登録されていないメールアドレスです</string>
    <string name="err_incorrect">メールアドレスまたはパスワードが正しくありません</string>
    <string name="user_data_not_exist">"指定されたアカウントはありません"</string>
    <string name="logout">LOGOUT</string>
    <string name="user_info">ユーザー情報</string>
    <string name="set_yourself">ご自分で設定したもの</string>
    <string name="update">更新</string>
    <string name="same_name">表示名に変更がありません</string>
    <string name="name_updated">表示名を更新しました</string>
    <string name="ask_logout">ログアウトしますか？</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hours_ago">時間前</string>
    <string name="check_if_watcher">みまもる側の方はチェックを付けてください</string>
    <string name="watcher_mode">みまもりモード</string>
    <string name="history_image">履歴の画像</string>
    <string name="_watcher_description">みまもりモードではボタンを押した履歴のみ表示されます</string>
    <string name="remind_to_pusher">ボタンを押すよう促す通知</string>
    <string name="notification_text">ボタンを押す時間です！</string>
    <string name="push_button_here">ここで押しちゃう！</string>
    <string name="button_pushed">ボタンを押しました！</string>
    <string name="remind_to_watcher">履歴を見るよう促す通知</string>
    <string name="lets_watch">何時にボタンが押されたか見てみましょう</string>
    <string name="can_put_comment">コメントを付けられます！</string>
    <string name="icon">icon</string>
    <string name="push_button">ボタンを押す！</string>
    <string name="check_history">安否確認をする</string>
    <string name="add_user">ユーザーを追加する</string>
    <string name="ask_delete_user">このユーザーをみまもるのをやめますか？</string>
    <string name="email">email</string>
    <string name="add_account">アカウントを追加</string>
    <string name="user_added">ユーザーを追加しました</string>
    <string name="user_deleted">ユーザーを削除しました</string>
    <string name="add_name">あなたから見える表示名</string>
</resources>